--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=config-server
 
 server.port=8888
 
-spring.cloud.config.server.git.uri=file:///mountedRepo
-spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.uri=https://github.com/shashikanth16193/AppConfigs.git
+spring.cloud.config.server.git.default-label=main
